# Kraken-Grid-Trading

./: .env.example  .gitignore  CLAUDE.md  GCP_VM_REFERENCE.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: __init__.py  config.yaml.example  settings.py
deploy/: install.sh  kraken-bot.service  uninstall.sh
scripts/: __init__.py  compute_features.py  download_historical.py  train_model.py
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  kraken_errors.py  kraken_private.py  order_manager.py  rate_limiter.py  websocket_client.py
src/core/: __init__.py  alerts.py  health_check.py  orchestrator.py  order_reconciler.py  portfolio.py  process_lock.py  risk_manager.py  state_manager.py
src/data/: __init__.py  data_sync.py  kraken_client.py  ohlcv_builder.py  trade_ingestion.py
src/features/: __init__.py  feature_pipeline.py  indicators.py  price_features.py  trend_features.py  volatility_features.py  volume_features.py
src/grid/: __init__.py  grid_calculator.py  grid_executor.py  grid_strategy.py  rebalancer.py
src/models/: __init__.py  data_preparation.py  model_evaluation.py  model_registry.py  regime_classifier.py  walk_forward.py
src/operations/: __init__.py
src/persistence/: __init__.py
src/regime/: __init__.py  outcome_labeler.py  regime_labeler.py
src/utils/: config_loader.py
tests/: __init__.py  test_alerts.py  test_api_auth.py  test_api_errors.py  test_data_leakage.py  test_grid_calculator.py  test_grid_executor.py  test_grid_strategy.py  test_health_check.py  test_orchestrator.py  test_order_manager.py  test_portfolio.py  test_rebalancer.py  test_risk_manager.py  test_state_manager.py
